# sales-slip-scanner-ng

./: .gitignore  README.md  benchmark_plan.md  conftest.py  li_post.md  localPipeline.sh  pyproject.toml  receipt_ocr.py  requirements.txt  salesSlipScanner.py  scanHotFolder.sh
documents/: agents.md
localVisionModelTest/: benchmark.py  modelsToTest.md  results.json  results.md
media/src/: project-impression-blueprint-schematic.html  project-impression-night-ledger.html  project-impression-thermal-receipt.html
tests/: test_benchmark.py  test_sales_slip_scanner.py
